# pane

./: Cargo.toml  README.md  rustfmt.toml
docs/: config-example.toml
src/: app.rs  command.rs  config.rs  controls.rs  history.rs  logging.rs  main.rs  mode.rs  pane.rs  pane_manager.rs  pane_manager_old.rs  pane_old.rs  session.rs  task_manager.rs  ui.rs
src/cli/: args.rs  mod.rs
src/command/: command.rs  executor.rs  history_manager.rs  mod.rs  serialization.rs  task_loop.rs  task_manager.rs  types.rs
src/config/: app_config.rs  defaults.rs  mod.rs  theme.rs  utils.rs
src/controls/: actions.rs  dispatcher.rs  display_select_mode.rs  edit_mode.rs  help_mode.rs  key_modes.rs  mod.rs  normal_mode.rs  observe_mode.rs  session_load_mode.rs  session_save_mode.rs
src/history/: history_manager.rs
src/mode/: mod.rs  state.rs
src/pane/: enums.rs  manager.rs  mod.rs  node.rs  node_data.rs  serialization.rs
src/session/: handlers.rs  mod.rs  models.rs  utils.rs
src/shell_history/: manager.rs  mod.rs
src/ui/: cmd_input.rs  cursor.rs  display_modes.rs  display_select.rs  draw.rs  help_menu.rs  mod.rs  observe.rs  pane.rs  session_load.rs  session_save.rs  status_line.rs  utils.rs
src/ui/diffs/: char.rs  line.rs  mod.rs  plain.rs  word.rs
src/ui/display_modes/: chart.rs  counter.rs  diff.rs  line_chart.rs  mod.rs  multiline.rs  raw_text.rs  sparkline.rs  types.rs  utils.rs
src/ui/observe/: content.rs  history.rs  mod.rs  search.rs
src/ui/panes/: border.rs  history_meter.rs  mod.rs  node.rs  node_info.rs
tests/snapshots/: pane__app__tests__help_mode_bottom.snap  pane__app__tests__help_mode_top.snap  pane__app__tests__normal_mode.snap  pane__app__tests__normal_mode_no_display_type.snap  pane__app__tests__normal_mode_no_status_bar.snap  pane__app__tests__observe_mode.snap  pane__app__tests__render_app.snap  pane__app__tests__zen_mode.snap
(+6 files in other folders)
