[package]
name = "pane"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"]}
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "3.0"
color-eyre = "0.6.3"
crokey = { git = "https://github.com/Canop/crokey", rev = "fe682ca1d5f5f3b324380511983c395f7a18836a"}
crossterm = { version = "0.28.1", features = ["event-stream"] }
derive_deref = "1.1.1"
directories = "5.0"
dirs = "5.0"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.0"}
similar = "2.7.0"
slotmap = { version = "1.0.6", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1.48.0", features = ["full", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tui-input = "0.14.0"

[dev-dependencies]
insta = "1.44.1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
strip = "symbols"

[lints.rust]
unused_imports = "allow"
